rezolvat o problema in admin.html ca sa includa corect meniul din header

--- a/public/admin.html
+++ b/public/admin.html
@@ -25,7 +25,7 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 </head>
 <body>
-    <div id="header"></div>
+    <div id="header" include-html="header.html"></div>
     <!-- Restul conținutului paginii aici -->
 
     <script>
