--- a/public/adauga_Restaurant.html
+++ b/public/adauga_Restaurant.html
@@ -59,9 +59,40 @@
                 <input type="file" class="form-control" id="banner">
             </div>
             <div class="mb-3">
-                <label for="schedule" class="form-label">Program</label>
-                <input type="text" class="form-control" id="schedule" required>
+                <h4>Program</h4>
+                <div class="row">
+                    <div class="col">
+                        <label for="luni" class="form-label">Luni</label>
+                        <input type="text" class="form-control" id="luni" value="11:00 - 22:00" required>
+                    </div>
+                    <div class="col">
+                        <label for="marti" class="form-label">Marti</label>
+                        <input type="text" class="form-control" id="marti" value="11:00 - 22:00" required>
+                    </div>
+                    <div class="col">
+                        <label for="miercuri" class="form-label">Miercuri</label>
+                        <input type="text" class="form-control" id="miercuri" value="11:00 - 22:00" required>
+                    </div>
+                    <div class="col">
+                        <label for="joi" class="form-label">Joi</label>
+                        <input type="text" class="form-control" id="joi" value="11:00 - 22:00" required>
+                    </div>
+                    <div class="col">
+                        <label for="vineri" class="form-label">Vineri</label>
+                        <input type="text" class="form-control" id="vineri" value="11:00 - 22:00" required>
+                    </div>
+                    <div class="col">
+                        <label for="sambata" class="form-label">Sambata</label>
+                        <input type="text" class="form-control" id="sambata" value="11:00 - 22:00" required>
+                    </div>
+                    <!-- Repetă pentru fiecare zi a săptămânii, modificând id-ul și label-ul corespunzător -->
+                    <div class="col">
+                        <label for="duminica" class="form-label">Duminică</label>
+                        <input type="text" class="form-control" id="duminica" value="11:00 - 22:00" required>
+                    </div>
+                </div>
             </div>
+            
             <button type="submit" class="btn btn-primary">Adaugă</button>
         </form>
     </div>
