--- a/public/adauga_Restaurant.html
+++ b/public/adauga_Restaurant.html
@@ -81,7 +81,8 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const daysOfWeek = ['Luni', 'Marți', 'Miercuri', 'Joi', 'Vineri', 'Sâmbătă', 'Duminică'];
+            const daysOfWeek = ['luni', 'marti', 'miercuri', 'joi', 'vineri', 'sambata', 'duminica']; // Modificat pentru a folosi litere mici
+
             const scheduleContainer = document.getElementById('scheduleContainer');
             
             daysOfWeek.forEach(day => {
