--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,22 @@
 
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="path/to/your/logo.png" alt="Logo" height="40">
+            </a>
+        </div>
+    </nav>
+
+    <div id="sidebar" class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
+        <h4>Restaurante</h4>
+        <ul class="nav nav-pills flex-column mb-auto" id="restaurant-list">
+            <!-- Lista restaurantelor va fi populată dinamic -->
+        </ul>
+    </div>
+    
+    
     <div class="container my-4">
         <h1 class="text-center mb-4">Restaurante</h1>
         <div class="d-flex justify-content-end">
