--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="path/to/your/logo.png" alt="Logo" height="40">
+                <img src="logo.webp" alt="Logo" height="30">
             </a>
         </div>
     </nav>
