--- a/public/header.html
+++ b/public/header.html
@@ -10,6 +10,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="adauga_Restaurant.html">Adaugă Restaurant</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="adauga_Meniu.html">Adaugă Meniu</a>
+                </li>
             </ul>
         </div>
     </div>
