--- a/public/adauga_Meniu.html
+++ b/public/adauga_Meniu.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Adauga Meniu</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <script defer src="/__/firebase/10.10.0/firebase-app-compat.js"></script>
-    <script defer src="/__/firebase/10.10.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/10.10.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/init.js"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Adauga Meniu</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <!-- update the version number as needed -->
+        <script defer src="/__/firebase/10.10.0/firebase-app-compat.js"></script>
+        <!-- include only the Firebase features as you need -->
+        <script defer src="/__/firebase/10.10.0/firebase-auth-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-database-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-firestore-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-functions-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-messaging-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-storage-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-analytics-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-remote-config-compat.js"></script>
+        <script defer src="/__/firebase/10.10.0/firebase-performance-compat.js"></script>
+        <!-- 
+          initialize the SDK after all desired features are loaded, set useEmulator to false
+          to avoid connecting the SDK to running emulators.
+        -->
+        <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    </head>
 <body>
+    <div id="header" include-html="header.html">    </div>
+
     <div class="container mt-5">
         <h2>Adaugă Articol în Meniu</h2>
         <form id="addMenuItemForm">
