--- a/public/register.html
+++ b/public/register.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Înregistrare</title>
-    <!-- Include Bootstrap CSS din node_modules sau CDN -->
-    <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-	    <!-- update the version number as needed -->
+    <link rel="stylesheet" href="ResisterStyles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <script defer src="/__/firebase/10.10.0/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/10.10.0/firebase-auth-compat.js"></script>
@@ -24,51 +24,76 @@
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+
+
 </head>
-<body class="bg-light">
+<body>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-4 mt-5">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h2 class="card-title text-center mb-4">Creează un Cont Nou</h2>
-                    <form id="register-form">
-    <div class="mb-3">
-        <input type="text" class="form-control" id="register-username" placeholder="Nume de utilizator" required>
-    </div>
-    <div class="mb-3">
-        <input type="password" class="form-control" id="register-password" placeholder="Parolă" required>
-    </div>
-    <div class="mb-3">
-        <input type="password" class="form-control" id="register-password-confirm" placeholder="Confirmare parolă" required>
-    </div>
-    <div class="mb-3">
-        <input type="text" class="form-control" id="register-fullname" placeholder="Nume complet" required>
-    </div>
-    <div class="mb-3">
-        <input type="email" class="form-control" id="register-email" placeholder="Email" required>
-    </div>
-    <div class="mb-3">
-        <input type="text" class="form-control" id="register-phone" placeholder="Telefon" required>
-    </div>
-    <div class="mb-3">
-        <input type="date" class="form-control" id="register-dob" placeholder="Data nașterii" required>
-    </div>
-    <button type="submit" class="btn btn-primary w-100">Înregistrează-te</button>
-</form>
-
-                    <div class="text-center mt-3">
-                        Ai deja un cont? <a href="login.html">Loghează-te</a>
-                    </div>
+    <header>
+        <div>  <h1 > <i class="fa-solid fa-utensils "></i> TasteIt.Restaurante</h1></div> 
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="LogIn.html">LOGIN</a></li>
+                <li><a href="Register.html">REGISTER</a></li>
+                <li><a href="#book-table">BOOK TABLE</a></li>
+            </ul>
+        </nav>
+        
+    </header>
+    
+    <main>
+        <div class="register-container">
+            <h2>Înregistrare</h2>
+            <form id="register-form">
+                <div class="form-group">
+                    <input type="text" id="register-username" placeholder="Username" required>
+                    <i class="fa-solid fa-user"></i>
                 </div>
+                <div class="form-group">
+                    <input type="text" id="register-email" placeholder="Email" required>
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+
+                <div class="form-group">
+                    <input type="password" id="register-password" placeholder="Parolă" required>
+                    <i class="fa-solid fa-lock"></i>        
+                </div>
+
+                <div class="form-group">
+                    <input type="password" id="register-password-confirm" placeholder="Confirmare parolă" required>
+                    <i class="fa-solid fa-lock"></i>        
+                </div>
+
+                <div class="form-group">
+                    <input type="text" id="register-fullname" placeholder="Nume complet" required>
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" id="register-phone" placeholder="Telefon" required>
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+
+                <div class="form-group">
+                    <input type="date" id="register-dob" placeholder="Data nașterii" required>
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+
+
+                <button type="submit">Înregistrare</button>
+            </form>
+            <div class="login-link">
+                <p>Ai deja cont? | <a href="LogIn.html">Autentificare</a></p>
             </div>
         </div>
-    </div>
-</div>
+    </main>
 
-<!-- Include Bootstrap JS și Popper.js din node_modules sau CDN -->
-<script src="js/register.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <footer>
+        <p>2024 TasteIt.Restaurante &copy; Drepturi de autor.</p>
+    </footer>
+
 </body>
+
+<script src="js/register.js"></script>
 </html>
