--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,23 @@
 ----->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+<script defer src="/__/firebase/10.10.0/firebase-app-compat.js"></script>
+<!-- include only the Firebase features as you need -->
+<script defer src="/__/firebase/10.10.0/firebase-auth-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-database-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-firestore-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-functions-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-messaging-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-storage-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-analytics-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-remote-config-compat.js"></script>
+<script defer src="/__/firebase/10.10.0/firebase-performance-compat.js"></script>
+<!-- 
+  initialize the SDK after all desired features are loaded, set useEmulator to false
+  to avoid connecting the SDK to running emulators.
+-->
+<script defer src="/__/firebase/init.js?useEmulator=true"></script>
+
 </head>
 
 <body>
