--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
                 htmlContent += `
                     <div class="col-md-3 mb-4">
                         <div class="card">
-                            <img src="${data.imageUrl}" class="card-img-top" alt="${data.name}">
+                            <img src="${data.logo}" class="card-img-top" alt="${data.name}">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">${data.name}</h5>
                                 <p class="card-text">${data.description || "Descriere indisponibilă"}</p>
